<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="630dp" />

        <TextView
            android:id="@+id/how_to_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="67dp" />

        <TextView
            android:id="@+id/explanation_box"
            android:layout_width="360dp"
            android:layout_height="49dp"
            android:text="@string/explanation_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="117dp" />

        <TextView
            android:id="@+id/designed_by_text_box"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:text="@string/designed_by_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="534dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>